[package]
name = "core"
version = "0.1.0"
authors = ["Huang Yunkun <htynkn@gmail.com>"]
edition = "2018"

[lib]
name = "core"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
xml-rs = "0.8"
log = "0.4.14"
log4rs = "1"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
lazy_static = "1.4.0"
anyhow = "1.0.38"
thiserror = "1.0.24"
once_cell = "1.7.2"
rusty_v8 = "0.20.0"

[dev-dependencies]
hamcrest = "*"
tempdir = "*"
